to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.12.6
  Add missing keywords to Pascal highlighter (#2834192)
  Fix help locations (#2988974)
  New translation: Persian (#2877121, #3065119)
  New translation: Serbian (#3017674, #3065119)
  Translation updates:
  - Chinese (#3033324)
  - Dutch (#2804979)
  - French (#2850842, #2968200)
  - Slovenian (#2917796, #2932094, #2934354)
  - Spanish (#2930734)
  - Turkish (#2825132, #2827817)
  - Ukrainian (#2817835)

WinMerge 2.12.4 - 2009-06-09 (r6833)
  Add more C/C++ types to syntax highlight (#2776705)
  Create config log file to My Documents-folder (#2789839)
  Bugfix: Reports had same left/right descriptions (#2772646)
  Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
  Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
  Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)
  Bugfix: Could select prediffer when plugins were disabled (#2787131)
  Bugfix: Opening mixed-EOL file one side forced both files to be handled as
    mixed-eol files (#2022312)
  Bugfix: Didn't show correct EOL chars if whitespace chars were turned off
    and again on (#2791402)
  Bugfix: Generated patch had wrong file time for UTF-16 files (#2791506)
  Bugfix: Did not export changed options values (#2799149)
  Bugfix: Reset the compare method to original if it was changed (#2802427)

WinMerge 2.12.2 - 2009-04-01 (r6625)
  Disable folder compare tree-view by default (#2714968)
  Bugfix: Filename extension column was empty for files (#2670046)
  Bugfix: Crash when selecting backup folder (#2686382)
  bugfix: Swapping panes did not update statusbar (#2661838)
  Bugfix: Says files are identical after making files different in another
    application and re-loading them (#2672737)
  Bugfix: Files with missing last EOL weren't merged correctly (#2712120)
  Translation updates:
  - Polish (#2717382, #2720875)
