@@ -8,6 +8,8 @@ WinMerge 2.12.6
   Fix help locations (#2988974)
   New translation: Persian (#2877121, #3065119)
   New translation: Serbian (#3017674, #3065119)
+  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
+    Microsoft Security Advisory (2269637)  (#33056008)
   Translation updates:
   - Chinese (#3033324)
   - Dutch (#2804979)
